# granola-mcp-server

./: ARCHITECTURE.md  CHANGELOG.md  README.md  design.md  main.py  pyproject.toml
examples/: remote_source_example.py
src/granola_mcp_server/: __init__.py  document_source.py  errors.py  parser.py  schemas.py  server.py
src/granola_mcp_server/config/: __init__.py  env.py
src/granola_mcp_server/sources/: __init__.py  adapter.py  factory.py  local_file.py  remote_api.py
src/granola_mcp_server/tools/: __init__.py  meetings.py  refresh.py  status.py
src/granola_mcp_server/utils/: __init__.py  date_parser.py  markdown_export.py
tests/: test_parser.py  test_tools.py
