[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granola-mcp-server"
version = "0.1.0"
description = "Local-first, read-only MCP server exposing Granola meetings via tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohamed Sharif" }
]
keywords = ["MCP", "Model Context Protocol", "Granola", "meetings", "local-first"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
mcp = [
  "fastmcp>=0.3.0; python_version>='3.10'",
  "mcp>=1.2.0; python_version>='3.10'",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "mypy>=1.8.0",
]

[project.scripts]
granola-mcp = "granola_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


